fix spacing in nav

--- a/style.css
+++ b/style.css
@@ -49,8 +49,13 @@ li {
   display: block;
   color: white;
   text-align: center;
-  padding: 14px 16px;
   text-decoration: none;
+  height: 52px;
+}
+
+li a {
+  padding: 14px 16px;
+  display: block;
 }
 
 h1 {
